[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyLSV2"
authors = [{ name = "drunsinn", email = "dr.unsinn@googlemail.com" }]
description = "A pure Python3 implementation of the LSV2 protocol"
requires-python = ">=3.9"
keywords = ["LSV2", "CNC", "PLC"]
dynamic = ["version", "readme"]
dependencies = []

[project.license]
file = "LICENSE"

[project.optional-dependencies]
SSH = ["sshtunnel>=0.4"]

[project.urls]
"Homepage" = "https://github.com/drunsinn/pyLSV2"
"Bug Tracker" = "https://github.com/drunsinn/pyLSV2/issues"

[project.scripts]
lsv2demo = "pyLSV2.scripts.demo:comprehensive_demo"
lsv2demo_scope = "pyLSV2.scripts.demo:scope_demo"
lsv2demo_ssh = "pyLSV2.scripts.ssh_tunnel:main"
lsv2scope2csv = "pyLSV2.scripts.scope2csv:main"
lsv2tab2csv = "pyLSV2.scripts.tab2csv:main"
lsv2cmd = "pyLSV2.scripts.cmd:main"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "sphinx>=7.2",
    "myst-parser>=3.0",
    "sphinx-autodoc-typehints>=2.3"
]
lint = ["ruff>=0.9.7"]
format = ["black>=25.0"]
ssh = ["sshtunnel>=0.4", "paramiko==3.5.1"]


[tool.hatch.version]
path = "pyLSV2/__init__.py"

[tool.black]
line-length = 140
target-version = ["py39"]
include = "\\.pyi?$"
verbose = true

[tool.ruff]
line-length = 140
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F403"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
#addopts = "--address localhost"

[tool.codespell]
skip = "*.po,*.ts,./docs/_build,./docs/_static,./.git"
count = ""
quiet-level = 3
ignore-words-list = "spindel"
